appId: com.oreku.reactnativeshowcase
---
- launchApp
- assertVisible: Showcase
- tapOn: Button
- assertVisible:
    id: progressive-blur-header
- assertVisible: VARIANTS
- scrollUntilVisible:
    element:
      id: button-toggle-loading
    direction: DOWN
- assertVisible:
    id: button-toggle-loading
